k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      component: nats
  template:
    metadata:
      labels:
        component: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
            '-p', '4222',
            '-m', '8222',
            '-hbi', '5s',
            '-hbt', '5s',
            '-hbf', '2',
            '-cid','ticketing',
            '-SD'
          ]


---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    component: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
 
    - name: monitoring
      port: 8222
      targetPort: 8222
