k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
          - path: /api/tickets/
            pathType: Prefix
            backend:
              service:
                name: tickets-service
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
